# Stock-Data-Generation

./: Makefile  README.md  main.py  pyproject.toml  requirements.txt  sample.py
data/: MSFT_indicators.csv  TSLA_indicators.csv  stocklista.csv
